<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/aboutActivity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/aboutActivity_toolbar"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- The main content view -->

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/logo512" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp">

                    <TextView
                        android:id="@+id/header_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="8dp"
                        android:text="ABOUT"
                        android:textAppearance="@style/AboutHeaderStyles" />

                    <TextView
                        android:id="@+id/about_expand_collapse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="8dp"
                        android:text="+"
                        android:textAppearance="@style/AboutHeaderStyles" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/backgroundAccent"
                    android:padding="8dp"
                    android:text="@string/about_aboutText"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp">

                    <TextView
                        android:id="@+id/header_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="8dp"
                        android:text="PRIVACY POLICY"
                        android:textAppearance="@style/AboutHeaderStyles" />

                    <TextView
                        android:id="@+id/privacy_expand_collapse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="8dp"
                        android:text="+"
                        android:textAppearance="@style/AboutHeaderStyles" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/backgroundAccent"
                    android:padding="8dp"
                    android:text="@string/about_privacyText"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp">

                    <TextView
                        android:id="@+id/header_legal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="8dp"
                        android:text="LEGAL"
                        android:textAppearance="@style/AboutHeaderStyles" />

                    <TextView
                        android:id="@+id/legal_expand_collapse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="8dp"
                        android:text="+"
                        android:textAppearance="@style/AboutHeaderStyles" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_legal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/backgroundAccent"
                    android:padding="8dp"
                    android:text="@string/about_legalText"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimaryDark"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>